Desktop view completed

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -40,6 +40,16 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 
+@include breakpoint() {
+  footer {
+    position: absolute;
+    bottom: .5rem;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+  }
+}
+
 .main {
   background-color: $neutral-300;
   &__logo {
@@ -238,4 +248,15 @@ input[type=number] {
 
 .input--error {
   border-color: lighten(red, 25%);
+}
+
+.attribution { 
+  font-size: 11px; 
+  text-align: center;
+  & a { 
+    color: $neutral-900;
+    &:hover {
+      color: $primary;
+    }
+  }
 }
